force-app/main/default/objects/Ligne_de_cotation__c/Ligne_de_cotation__c.object-meta.xml
<CustomObject>
    <label>Ligne de cotation</label>
    <nameField>
        <displayFormat>Article{0000}</displayFormat>
        <label>Ligne de cotation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lignes de cotation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>