force-app/main/default/objects/Ligne_de_cotation__c/fields/Article__c.field-meta.xml
<CustomField>
    <fullName>Article__c</fullName>
    <label>Article</label>
    <referenceTo>Article__c</referenceTo>
    <relationshipLabel>Lignes de cotation</relationshipLabel>
    <relationshipName>Lignes_de_cotation</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>