force-app/main/default/objects/Ligne_de_cotation__c/fields/Cotation__c.field-meta.xml
<CustomField>
    <fullName>Cotation__c</fullName>
    <label>Cotation</label>
    <referenceTo>Cotation__c</referenceTo>
    <relationshipLabel>Lignes de cotation</relationshipLabel>
    <relationshipName>Lignes_de_cotation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>