force-app/main/default/objects/Ligne_de_cotation__c/fields/Prix_Total_HT__c.field-meta.xml
<CustomField>
    <fullName>Prix_Total_HT__c</fullName>
    <formula>Prix__c *  Quantite__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prix Total HT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>