force-app/main/default/objects/Ligne_de_cotation__c/fields/Prix_Total_TTC__c.field-meta.xml
<CustomField>
    <fullName>Prix_Total_TTC__c</fullName>
    <formula>(Prix__c * Quantite__c) * (1 + (Article__r.TVA__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prix Total TTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>